Moved class name ORU from <body> tag to wrapper <div> in order to make it possible to include a non-iframe solution

--- a/html/css/style.less
+++ b/html/css/style.less
@@ -938,15 +938,15 @@ circle#background {
 }
 
 
-body.PD0200 .nr_label,
-body.PD0200 #lives_improved_percentage_sub tspan,
-body.PD0200 #nr_lives_improved_label {
+.PD0200 .nr_label,
+.PD0200 #lives_improved_percentage_sub tspan,
+.PD0200 #nr_lives_improved_label {
   fill: @grey-medium;
 }
 
 
 
-body.philips {
+.philips {
   // fold out background colors
   #region_info,
   #region_history,
@@ -982,7 +982,7 @@ body.philips {
   }
 }
 
-body.PD0100 {
+.PD0100 {
   // fold out background colors
   #region_info,
   #region_history,
@@ -1018,7 +1018,7 @@ body.PD0100 {
   }
 }
 
-body.PD0200 {
+.PD0200 {
   // fold out background colors
   #region_info,
   #region_history,
@@ -1052,7 +1052,7 @@ body.PD0200 {
   /* SOMETHING MISSING HERE */
 }
 
-body.PD0900 {
+.PD0900 {
   // fold out background colors
   #region_info,
   #region_history,
@@ -1089,7 +1089,7 @@ body.PD0900 {
 }
 
 /* NEW */
-body.DHS001 {
+.DHS001 {
   // fold out background colors
   #region_info,
   #region_history,
@@ -1126,7 +1126,7 @@ body.DHS001 {
   }
 }
 
-body.DHS003 {
+.DHS003 {
   // fold out background colors
   #region_info,
   #region_history,
@@ -1755,42 +1755,42 @@ div#debug_layer {
   }
 
   // Sector colors
-  body.philips {
+  .philips {
     .slider_value,
     #simulation_wrapper h1 {
       color: @philips-medium;
     }
   }
 
-  body.PD0100 {
+  .PD0100 {
     .slider_value,
     #simulation_wrapper h1 {
       color: @pd0100-medium;
     }
   }
 
-  body.PD0200 {
+  .PD0200 {
     .slider_value,
     #simulation_wrapper h1 {
       color: @pd0200-medium;
     }
   }
 
-  body.PD0900 {
+  .PD0900 {
     .slider_value,
     #simulation_wrapper h1 {
       color: @pd0900-medium;
     }
   }
 
-  body.DHS001 {
+  .DHS001 {
     .slider_value,
     #simulation_wrapper h1 {
       color: @dhs001-dark;
     }
   }
 
-  body.DHS003 {
+  .DHS003 {
     .slider_value,
     #simulation_wrapper h1 {
       color: @dhs003-dark;
