Title in region info panel for public website

--- a/html/css/style.less
+++ b/html/css/style.less
@@ -999,6 +999,15 @@ circle#background {
   #arrow_down {
     background: @philips-medium;
   }
+
+  // region info title
+  #region_info_title_wrapper{
+    background-color: @philips-dark;
+    h2{
+      color: white;
+    }
+  }
+
   // lives improved circle diagram
   #arc_path {
     stroke: @philips-light;
@@ -1035,6 +1044,15 @@ circle#background {
   #arrow_down {
     background: @pd0100-medium;
   }
+
+  // region info title
+  #region_info_title_wrapper{
+    background-color: @pd0100-dark;
+    h2{
+      color: white;
+    }
+  }
+
   // lives improved circle diagram
   #arc_path {
     stroke: @pd0100-light;
@@ -1071,6 +1089,15 @@ circle#background {
   #arrow_down {
     background: @pd0200-medium;
   }
+
+  // region info title
+  #region_info_title_wrapper{
+    background-color: @pd0200-dark;
+    h2{
+      color: white;
+    }
+  }
+
   // lives improved circle diagram
   #arc_path {
     stroke: @pd0200-light;
@@ -1105,6 +1132,15 @@ circle#background {
   #arrow_down {
     background: @pd0900-medium;
   }
+
+  // region info title
+  #region_info_title_wrapper{
+    background-color: @pd0900-dark;
+    h2{
+      color: white;
+    }
+  }
+
   // lives improved circle diagram
   #arc_path {
     stroke: @pd0900-light;
@@ -1142,6 +1178,15 @@ circle#background {
   #arrow_down {
     background: @dhs001-medium;
   }
+
+  // region info title
+  #region_info_title_wrapper{
+    background-color: @dhs001-dark;
+    h2{
+      color: white;
+    }
+  }
+
   // lives improved circle diagram
   #arc_path {
     stroke: @dhs001-light;
@@ -1179,6 +1224,15 @@ circle#background {
   #arrow_down {
     background: @dhs003-medium;
   }
+
+  // region info title
+  #region_info_title_wrapper{
+    background-color: @dhs003-dark;
+    h2{
+      color: white;
+    }
+  }
+
   // lives improved circle diagram
   #arc_path {
     stroke: @dhs003-light;
@@ -1995,6 +2049,10 @@ div#content_outer_wrapper {
             div#region_info_title_wrapper{
               display: block;
               h2{
+                margin-top: 0px!important;
+                margin-bottom: 0px!important;
+                padding-top: 5px;
+                padding-bottom: 2px;
 
               }
             }
