removed the *heavy* worldmap.svg from the application

--- a/html/css/style.less
+++ b/html/css/style.less
@@ -757,7 +757,7 @@ circle#background {
 
 #login_panel {
   background-color: #f4f4f4;
-  background-image: url(../img/worldmap.svg);
+  //background-image: url(../img/worldmap.svg);
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100% auto;
