Hide Organizational Unit filter selection on the public website

--- a/html/css/style.less
+++ b/html/css/style.less
@@ -1994,6 +1994,7 @@ div#content_outer_wrapper {
         }
         // Product group selection
         div#filter_container {
+          display: none;
           width: 240px;
           float: right;
           border: 0px solid red;
